unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/icatp__File_Slayer_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>File Slayer Settings</label>
</CustomObject>