unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__App_Branding_Updated__c.field-meta.xml
<CustomField>
    <fullName>icatp__App_Branding_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all branding for the File Slayer App was updated to the latest Vicasso branding.</description>
    <label>App Branding Updated</label>
    <type>Checkbox</type>
</CustomField>