unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Default_Date_Range_Filter__c.field-meta.xml
<CustomField>
    <fullName>icatp__Default_Date_Range_Filter__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Default Date Range Filter</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>