unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Default_File_Size_Filter__c.field-meta.xml
<CustomField>
    <fullName>icatp__Default_File_Size_Filter__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Default File Size Filter</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>