unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Disable_Hash_Population_During_Search__c.field-meta.xml
<CustomField>
    <fullName>icatp__Disable_Hash_Population_During_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Hash Population During Search</label>
    <type>Checkbox</type>
</CustomField>