unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Disable_Slay_In_Future__c.field-meta.xml
<CustomField>
    <fullName>icatp__Disable_Slay_In_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Slay In Future</label>
    <type>Checkbox</type>
</CustomField>