unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Enable_Security_Bypass__c.field-meta.xml
<CustomField>
    <fullName>icatp__Enable_Security_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated field. Use Security_Bypass__c instead.</description>
    <label>Enable Security Bypass</label>
    <type>Checkbox</type>
</CustomField>