unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Enable_Slaybot__c.field-meta.xml
<CustomField>
    <fullName>icatp__Enable_Slaybot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Slaybot</label>
    <type>Checkbox</type>
</CustomField>