unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Hash_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>icatp__Hash_Batch_Status__c</fullName>
    <label>Hash Batch Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>