unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Security_Bypass__c.field-meta.xml
<CustomField>
    <fullName>icatp__Security_Bypass__c</fullName>
    <description>The conditions in which to apply security bypass.</description>
    <label>Security Bypass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>