unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Slay_Historic__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slay_Historic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slay Historic</label>
    <type>Checkbox</type>
</CustomField>