unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Slay_Historic_Sharing_Bypass__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slay_Historic_Sharing_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slay Historic Sharing Bypass</label>
    <type>Checkbox</type>
</CustomField>