unpackaged/main/default/objects/icatp__File_Slayer_Settings__c/fields/icatp__Slaybot_Threshold__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slaybot_Threshold__c</fullName>
    <defaultValue>99</defaultValue>
    <label>Slaybot_Threshold</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>